sharding-jdbc 测试

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -4,12 +4,12 @@ log4j.logger.httpclient=error
 log4j.logger.httpclient.wire.header=ERROR
 log4j.logger.org.apache.commons.httpclient=ERROR
 
-log4j.rootLogger=DEBUG,stdout
+log4j.rootLogger=INFO,stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=[%d]-%-5p (%F:%L) - %m%n
 
-log4j.logger.WebServiceLog=DEBUG,WebServiceLog
+log4j.logger.WebServiceLog=INFO,WebServiceLog
 log4j.appender.WebServiceLog=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.WebServiceLog.File=logs/webservice.log
 log4j.appender.WebServiceLog.DatePattern=MM-dd'.log'
