--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <spring.version>4.3.0.RELEASE</spring.version>
+	  <sharding-sphere.version>3.0.0.M2</sharding-sphere.version>
   </properties>
 
  <dependencies>
@@ -21,7 +22,19 @@
             <artifactId>mybatis</artifactId>
             <version>3.2.6</version>
         </dependency>
+	 <!-- for spring boot -->
+	 <dependency>
+		 <groupId>io.shardingsphere</groupId>
+		 <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+		 <version>${sharding-sphere.version}</version>
+	 </dependency>
 
+	 <!-- for spring namespace -->
+	 <dependency>
+		 <groupId>io.shardingsphere</groupId>
+		 <artifactId>sharding-jdbc-spring-namespace</artifactId>
+		 <version>${sharding-sphere.version}</version>
+	 </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -32,7 +45,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>6.0.6</version>
+            <version>5.0.5</version>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -110,17 +123,17 @@
 		<!-- log end -->
 		<!-- 映入JSON -->
         <!-- https://mvnrepository.com/artifact/cglib/cglib -->
-<dependency>
-    <groupId>cglib</groupId>
-    <artifactId>cglib</artifactId>
-    <version>3.2.6</version>
-</dependency>
+		<dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib</artifactId>
+			<version>3.2.6</version>
+		</dependency>
   <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
-<dependency>
-    <groupId>org.aspectj</groupId>
-    <artifactId>aspectjweaver</artifactId>
-    <version>1.9.1</version>
-</dependency>
+		<dependency>
+			<groupId>org.aspectj</groupId>
+			<artifactId>aspectjweaver</artifactId>
+			<version>1.9.1</version>
+		</dependency>
         
     <dependency>
       <groupId>junit</groupId>
@@ -128,5 +141,16 @@
       <version>4.12</version>
       <scope>test</scope>
     </dependency>
-  </dependencies>
+	 <dependency>
+		 <groupId>org.springframework.boot</groupId>
+		 <artifactId>spring-boot-autoconfigure</artifactId>
+		 <version>1.5.2.RELEASE</version>
+	 </dependency>
+	 <dependency>
+		 <groupId>org.springframework.boot</groupId>
+		 <artifactId>spring-boot-test</artifactId>
+		 <version>1.5.2.RELEASE</version>
+		 <scope>test</scope>
+	 </dependency>
+ </dependencies>
 </project>
